# django-saas-base

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: pypi.yml  test.yml
demo/: settings.py  urls.py
demo/debug_emails/: views.py
src/saas_base/: admin.py  apps.py  auth_backends.py  middleware.py  schema.py  settings.py  settings.pyi  spectacular_schema.py  test.py
src/saas_base/api_urls/: all.py  session.py  user.py
src/saas_base/db/: cache.py  fields.py  manager.py
src/saas_base/debug_emails/: urls.py  views.py
src/saas_base/drf/: apps.py  filters.py  middleware.py  permissions.py  schema.py  serializers.py  token.py  views.py
src/saas_base/endpoints/: auth.py  members.py  password.py  user.py  user_emails.py  user_tenants.py
src/saas_base/fixtures/: permissions.yaml  test_data.yaml
src/saas_base/locale/de/LC_MESSAGES/: django.mo
src/saas_base/locale/es/LC_MESSAGES/: django.mo
src/saas_base/locale/fr/LC_MESSAGES/: django.mo
src/saas_base/locale/ja/LC_MESSAGES/: django.mo
src/saas_base/locale/zh/LC_MESSAGES/: django.mo
src/saas_base/mail/: __init__.py  base.py
src/saas_base/management_api/: members.py  tenant.py  urls.py  user.py
src/saas_base/migrations/: 0001_initial.py  0002_add_role_and_update_member.py  0002_remove_member_is_owner_remove_member_name_and_more.py  0002_rename_invite_email_member_email_member_name_role_and_more.py  0003_remove_member_is_staff.py
src/saas_base/models/: __init__.py  member.py  permission.py  role.py  tenant.py  user_email.py
src/saas_base/rules/: email_address.py  turnstile.py
src/saas_base/security/: __init__.py  ip.py  rules.py
src/saas_base/serializers/: auth.py  email_code.py  member.py  password.py  user.py  user_email.py
src/saas_base/session_api/: _notification.py  auth.py  password.py
src/saas_base/tasks/: send_mails.py
src/saas_base/templates/saas_emails/: invite_member.html
src/saas_base/templates/saas_emails/partials/: components.css  reset.css
tests/: settings.py  urls.py
tests/apis/: test_auth_session.py  test_members_api.py  test_user_api.py  test_user_email_api.py  test_user_tenants_api.py
tests/demo_app/: apps.py  models.py  serializers.py
tests/drf/: test_tenant_middleware.py
tests/management_api/: test_members_api.py
tests/session_api/: test_auth_session.py
